handle DEBUG flag via project environment

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy35]
+[env]
 platform = teensy
 board = teensy35
 framework = arduino
@@ -19,5 +19,11 @@ lib_deps =
 lib_ignore = 
 	VirtualWire
 
+[env:release]
+
+[env:debug]
+build_flags = -D DEBUG
+
 [platformio]
 description = Firmware for the Bpod Stepper Module
+default_envs = release
