--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,21 +10,30 @@
 
 [env]
 platform = teensy
-board = teensy35
 framework = arduino
-lib_deps = 
+upload_protocol = teensy-cli
+lib_deps =
 	https://github.com/luni64/TeensyStep.git#e151a87dc6842dad0bccd2c83e414862d46eae49
 	https://github.com/teemuatlut/TMCStepper.git#v0.7.3
 	https://github.com/bimac/SmoothStepper.git
 	https://github.com/bimac/ArCOM.git
-lib_ignore = 
+lib_ignore =
 	VirtualWire
 
-[env:release]
+[env:teensy35]
+board = teensy35
 
-[env:debug]
+[env:teensy36]
+board = teensy36
+
+[env:teensy35_serial_debug]
+board = teensy35
+build_flags = -D DEBUG
+
+[env:teensy36_serial_debug]
+board = teensy35
 build_flags = -D DEBUG
 
 [platformio]
 description = Firmware for the Bpod Stepper Module
-default_envs = release
+default_envs = teensy35
