add environment for jlink probe

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,12 +19,25 @@ lib_deps =
 	https://github.com/bimac/ArCOM.git
 lib_ignore =
 	VirtualWire
+build_flags = -D TEENSY_OPT_FASTEST
 
-[env:teensy35]
+[env:teensy35_release]
 board = teensy35
 
-[env:teensy36]
+[env:teensy36_release]
 board = teensy36
+
+[env:teensy36_debug]
+board = teensy36
+;build_type = debug
+;debug_build_flags = -O0 -ggdb3 -g3
+build_flags = -O0 -ggdb3 -g3
+debug_tool = jlink
+upload_protocol = jlink
+
+[env:teensy36_jlink_upload]
+board = teensy36
+upload_protocol = jlink
 
 [env:teensy35_serial_debug]
 board = teensy35
@@ -36,4 +49,4 @@ build_flags = -D DEBUG
 
 [platformio]
 description = Firmware for the Bpod Stepper Module
-default_envs = teensy35
+default_envs = teensy35_release
