add support for quadrature encoder

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -27,7 +27,7 @@ board = teensy35
 [env:teensy36_release]
 board = teensy36
 
-[env:teensy36_debug]
+[env:teensy36_jlink_debug]
 board = teensy36
 ;build_type = debug
 ;debug_build_flags = -O0 -ggdb3 -g3
@@ -35,7 +35,7 @@ build_flags = -O0 -ggdb3 -g3
 debug_tool = jlink
 upload_protocol = jlink
 
-[env:teensy36_jlink_upload]
+[env:teensy36_jlink_release]
 board = teensy36
 upload_protocol = jlink
 
