switch to QuadDecode library

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,8 +17,8 @@ lib_deps =
 	https://github.com/teemuatlut/TMCStepper.git#v0.7.3
 	https://github.com/bimac/SmoothStepper.git
 	https://github.com/bimac/ArCOM.git
-lib_ignore =
-	VirtualWire
+	https://github.com/bimac/Teensy3x_QuadDecode.git
+lib_ignore = VirtualWire
 build_flags = -D TEENSY_OPT_FASTEST
 
 [env:teensy35_release]
