--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,20 +13,31 @@ platform = teensy
 framework = arduino
 upload_protocol = teensy-cli
 lib_deps =
-	https://github.com/luni64/TeensyStep.git
+	https://github.com/luni64/TeensyStep.git#e151a87dc6842dad0bccd2c83e414862d46eae49
 	https://github.com/teemuatlut/TMCStepper.git#v0.7.3
 	https://github.com/bimac/SmoothStepper.git
 	https://github.com/bimac/ArCOM.git
-	https://github.com/bimac/Teensy3x_QuadDecode.git
-lib_ignore = VirtualWire
+lib_ignore =
+	VirtualWire
 build_flags = -D TEENSY_OPT_FASTEST
-debug_tool = jlink
 
-[env:teensy35]
+[env:teensy35_release]
 board = teensy35
 
-[env:teensy36]
+[env:teensy36_release]
 board = teensy36
+
+[env:teensy36_debug]
+board = teensy36
+;build_type = debug
+;debug_build_flags = -O0 -ggdb3 -g3
+build_flags = -O0 -ggdb3 -g3
+debug_tool = jlink
+upload_protocol = jlink
+
+[env:teensy36_jlink_upload]
+board = teensy36
+upload_protocol = jlink
 
 [env:teensy35_serial_debug]
 board = teensy35
@@ -38,4 +49,4 @@ build_flags = -D DEBUG
 
 [platformio]
 description = Firmware for the Bpod Stepper Module
-default_envs = teensy35
+default_envs = teensy35_release
