--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -11,7 +11,6 @@
 [env]
 platform = teensy
 framework = arduino
-upload_protocol = teensy-cli
 lib_deps =
 	https://github.com/luni64/TeensyStep.git
 	https://github.com/teemuatlut/TMCStepper.git#v0.7.3
@@ -20,7 +19,11 @@ lib_deps =
 	https://github.com/bimac/Teensy3x_QuadDecode.git
 lib_ignore = VirtualWire
 build_flags = -D TEENSY_OPT_FASTEST
+
+[env:debug]
 debug_tool = jlink
+upload_protocol = jlink
+board = teensy36
 
 [env:teensy35]
 board = teensy35
