serial_debug builds with dual serial ports

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -33,11 +33,15 @@ board = teensy36
 
 [env:teensy35_serial_debug]
 board = teensy35
-build_flags = -D DEBUG
+build_flags =
+	-D USB_DUAL_SERIAL
+	-D DEBUG
 
 [env:teensy36_serial_debug]
 board = teensy35
-build_flags = -D DEBUG
+build_flags =
+	-D USB_DUAL_SERIAL
+	-D DEBUG
 
 [platformio]
 description = Firmware for the Bpod Stepper Module
