Squashed commit of the following:
commit 72e4d6ae8f8d41f057527c39be8038e63382b474
Author: Florian Rau <bimac@users.noreply.github.com>
Date:   Tue Apr 11 23:45:01 2023 +0200

    almost!

commit 262aee6bf922607248ab955985eb8a3e2609e70b
Author: Florian Rau <bimac@users.noreply.github.com>
Date:   Sun Apr 2 22:17:01 2023 +0200

    getting there ...

commit 76fdcc939ca24c77ae2e7cb9c0eff08a7b16bb5b
Author: Florian Rau <bimac@users.noreply.github.com>
Date:   Thu Mar 30 07:14:24 2023 +0200

    started work on templating

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,15 +1,9 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+description = Firmware for the Bpod Stepper Module
+default_envs = teensy35, teensy36
 
 [env]
-platform = teensy
+platform = teensy @ =4.17.0
 framework = arduino
 lib_deps =
 	https://github.com/luni64/TeensyStep.git
@@ -18,7 +12,11 @@ lib_deps =
 	https://github.com/bimac/ArCOM.git
 	https://github.com/bimac/Teensy3x_QuadDecode.git
 lib_ignore = VirtualWire
-build_flags = -D TEENSY_OPT_FASTEST
+custom_version_index = 1
+build_flags =
+	-D TEENSY_OPT_FASTEST
+extra_scripts =
+	pre:scripts/getVersion.py
 
 [env:debug]
 debug_tool = jlink
@@ -34,15 +32,6 @@ board = teensy36
 [env:teensy35_serial_debug]
 board = teensy35
 build_flags =
+	${env.build_flags}
 	-D USB_DUAL_SERIAL
 	-D DEBUG
-
-[env:teensy36_serial_debug]
-board = teensy35
-build_flags =
-	-D USB_DUAL_SERIAL
-	-D DEBUG
-
-[platformio]
-description = Firmware for the Bpod Stepper Module
-default_envs = teensy35
