--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,6 +1,18 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 description = Firmware for the Bpod Stepper Module
-default_envs = teensy35, teensy36
+default_envs =
+	teensy35
+	teensy36
 
 [env]
 platform = teensy @ =4.17.0
@@ -8,15 +20,12 @@ framework = arduino
 lib_deps =
 	https://github.com/luni64/TeensyStep.git
 	https://github.com/teemuatlut/TMCStepper.git#v0.7.3
-	https://github.com/bimac/SmoothStepper.git
 	https://github.com/bimac/ArCOM.git
 	https://github.com/bimac/Teensy3x_QuadDecode.git
 lib_ignore = VirtualWire
 custom_version_index = 1
-build_flags =
-	-D TEENSY_OPT_FASTEST
-extra_scripts =
-	pre:scripts/getVersion.py
+build_flags = -D TEENSY_OPT_FASTEST
+extra_scripts = pre:scripts/getVersion.py
 
 [env:debug]
 debug_tool = jlink
